Archive2/b9/9d22a6ba75729a/output
main.cpp: In instantiation of 'constexpr std::size_t array_counter(std::size_t) [with T = const char**; std::size_t = long unsigned int]':
main.cpp:17:5:   required from here
main.cpp:6:5: error: static assertion failed: ARRAY_COUNT called on non-array
     static_assert(std::is_array<T>::value, "ARRAY_COUNT called on non-array");
     ^
